logging config made

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,8 +19,11 @@ spring.queries.roles-query=select u.email,r.name from user u inner join user_rol
 
 server.port = 7091
 
-logging.level.org.springframework.web=DEBUG
-logging.level.org.hibernate=ERROR
+logging.level.root= DEBUG
+logging.level.org.springframework.security= DEBUG
+logging.level.org.springframework.web= ERROR
+logging.level.org.hibernate= DEBUG
+logging.level.org.apache.commons.dbcp2= DEBUG
 
 app.roles.role_user=ROLE_USER
 app.roles.role_admin=ADMIN_USER
